<resources>
    <string name="app_name">Course Management</string>
    <string name="registration">Registration</string>
    <string name="course_name">Course Name : </string>
    <string name="full_name">Full Name : </string>
    <string name="submit">Submit </string>
    <string name="birthday">Birthday</string>
    <string name="course_registration_title">FULL TIME PROGRAMMES \nREGESTRATION</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="email">Email :</string>
    <string name="johndoe_gmail_com">johndoe@gmail.com</string>
    <string name="contact_no">Contact No :</string>
    <string name="john_doe">John Doe</string>
    <string name="select_promotion_code">Promotion \nCode :</string>
    <string name="label">*If you are a student of a selected school which is \neligible for discounts.Enter your promotion Code.</string>
    <string name="branch">Branch :</string>
    <string name="address">Address :</string>
    <string name="student_information">Student Information</string>
    <string name="nic">NIC</string>
    <string name="tp_txt">071 678 5690</string>
    <string name="select_branch">Select branch</string>
    <string name="find_nearby_branches">Find Nearby Branches</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string-array name="branchesArray">
        <item>Mathara</item>
        <item>Negambo</item>
        <item>Colombo</item>
        <item>Kegalle</item>
        <item>Jaffna</item>
        <item>Piliyandala</item>
        <item>Kottawa</item>
        <item>Kandy</item>
    </string-array>
    <string name="MAPS_API_KEY">REPLACE-WITH-YOUR-MAPS-API</string>
    <string name="national_institute_of_computing">National Institute of Computing</string>
    <string name="direction">direction</string>
    <string name="ok">OK</string>
    <string name="discount">Discount:</string>
    <string name="course_fee">Course Fee:</string>
    <string name="email_hint">       Email</string>
    <string name="remember_me">Remember Me</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="loginimage">loginImage</string>
    <string name="view_password">View Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="login_as_guest">Login as Guest</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="more">more</string>
    <string name="login_as_admin">Login as Admin</string>
    <string name="user_image">user image</string>
    <string name="upload_a_picture_optional">upload a picture (optional)</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="other">Other</string>
    <string name="back">Back</string>
    <string name="email_text">Email</string>
    <string name="password">Password</string>
    <string name="full_name_text">Full Name</string>
    <string name="address_text">Address</string>
    <string name="living_city">Living City</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="nic_text">NIC</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="confirmation_password">Confirmation Password</string>
    <string name="to_admin_panel">To Admin Panel</string>
    <string name="total_amount">Total Amount:</string>
    <string name="student">STUDENT</string>
    <string name="floatingaction">floatingAction</string>
    <string name="add_new_course">Add New Course</string>
    <string name="back_button">back button</string>
    <string name="edit_student_detail">Edit Student Detail</string>
    <string name="delete_student">Delete Student</string>
    <string name="student_nic">Student NIC :</string>
    <string name="delete_course">Delete Course</string>
    <string name="backbutton">backButton</string>
    <string name="optionbutton">optionButton</string>
</resources>