<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.UserLogin"
    android:background="@color/off_white"
    android:id="@+id/main"
    >

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:isScrollContainer="true">

        <LinearLayout
            android:id="@+id/main_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:orientation="vertical"
                app:layout_anchor="@+id/nestedScrollView4"
                app:layout_anchorGravity="center">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    app:layout_constraintBottom_toTopOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.477"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="0dp" />

                <EditText
                    android:id="@+id/txt_email"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="28dp"
                    android:autofillHints=""
                    android:background="@android:drawable/editbox_background_normal"
                    android:hint="@string/email_text"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.49"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/remember_me"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_pword" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="96dp"
                    android:text="@string/welcome_back"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="0dp" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="190dp"
                    android:layout_height="155dp"
                    android:layout_marginTop="28dp"
                    android:contentDescription="@string/loginimage"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    app:srcCompat="@drawable/login" />

                <EditText
                    android:id="@+id/txt_pword"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:autofillHints=""
                    android:background="@android:drawable/editbox_background_normal"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="@+id/txt_email"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_email" />

                <ImageButton
                    android:id="@+id/btn_view_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/view_password"
                    android:src="@drawable/ic_hide_password"
                    app:layout_constraintBottom_toBottomOf="@+id/txt_pword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.93"
                    app:layout_constraintStart_toStartOf="@+id/txt_pword"
                    app:layout_constraintTop_toTopOf="@+id/txt_pword"
                    app:layout_constraintVertical_bias="0.545" />

                <TextView
                    android:id="@+id/tv_forgot_pword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/forgot_password"
                    android:textColor="@color/forgot_password_text_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/checkBox"
                    app:layout_constraintTop_toBottomOf="@+id/txt_pword" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="36dp"
                    android:backgroundTint="@color/forgot_password_text_color"
                    android:text="@string/log_in"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:cornerRadius="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox" />

                <Button
                    android:id="@+id/btn_guest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/login_as_guest"
                    android:textColor="@color/forgot_password_text_color"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_login" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_marginBottom="9dp"
                    android:text="@string/don_t_have_an_account"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_guest" />

                <Button
                    android:id="@+id/btn_register_redirect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:padding="0dp"
                    android:text="@string/register"
                    android:textColor="@color/forgot_password_text_color"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView3" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>